--- a/advisory.html
+++ b/advisory.html
@@ -100,18 +100,23 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                                <li class="dropdown"><a target="__blank" href="index.html">Home</a></li>
-                                <li class="dropdown"><a target="__blank" href="ssic.html">About</a>
+                                <li><a href="index.html">Home</a></li>
+                                <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
-                                        <li><a target="__blank" href="ssic.html">SSIC 2017</a></li>
-                                        <li><a target="__blank" href="ssic2019.html">SSIC 2019</a></li>
-                                        <li><a target="__blank" href="https://jaipur.manipal.edu/">About Manipal</a></li>
-                                        <li><a target="__blank" href="about-jaipur.html">About Jaipur</a></li>
+                                        <li><a href="ssic.html">SSIC 2017</a></li>
+                                        <li><a href="ssic2019.html">SSIC 2019</a></li>
+                                        <li><a href="https://jaipur.manipal.edu/">About Manipal</a></li>
+                                        <li><a href="about-jaipur.html">About Jaipur</a></li>
                                     </ul>
                                 </li>
-                                <li ><a target="__blank" href="speakers.html">Speakers</a></li>
-                                <li ><a class="current" target="__blank" href="organizers.html">Organizers</a></li>
-                                <li><a target="__blank" href="contact.html">Contact</a></li>
+                                <li class="dropdown"><a href="organizers.html">Committees</a>
+                                    <ul>
+                                        <li><a href="organizers.html">Organisers</a></li>
+                                        <li><a href="advisory.html">Advisory Committee</a></li>
+                                    </ul>
+                                </li>
+                                <li ><a class="current" href="speakers.html">Speakers</a></li>
+                                <li><a href="schedule.html">Schedule</a></li>
                             </ul>
                         </div>
                     </nav>
