updated advisory headings

--- a/advisory.html
+++ b/advisory.html
@@ -111,7 +111,7 @@
                                 </li>
                                 <li class="dropdown"><a href="organizers.html">Committees</a>
                                     <ul>
-                                        <li><a href="organizers.html">Organisers</a></li>
+                                        <li><a href="organizers.html">Advisory Committee</a></li>
                                         <li><a href="advisory.html">Advisory Committee</a></li>
                                     </ul>
                                 </li>
@@ -169,10 +169,10 @@
     <!--Page Title-->
     <section class="page-title" style="background-image:url(images/background/5.jpg);">
         <div class="auto-container">
-            <h1>Organisers</h1>
+            <h1>Advisory Committee</h1>
             <ul class="bread-crumb clearfix">
                 <li><a target="__blank" href="index.html">Home</a></li>
-                <li>Organisers</li>
+                <li>Advisory Committee</li>
             </ul>
         </div>
     </section>
@@ -188,7 +188,7 @@
         <div class="auto-container">
             <div class="sec-title text-center">
                 <span class="title">Organisers</span>
-                <h2>Chief Patron(s)</h2>
+                <h2>Advisory Committee</h2>
             </div>
 
             <div class="row">
