--- a/advisory.html
+++ b/advisory.html
@@ -382,11 +382,12 @@
                                 <div class="footer-widget useful-links">
                                     <h2 class="widget-title">Useful Links</h2>
                                     <ul class="user-links">
-                                        <li><a target="__blank" href="index.html">Home</a></li>
-                                        <li><a target="__blank" href="about-us.html">About Us</a></li>
-                                        <li><a target="__blank" href="speakers.html">Speakers</a></li>
-                                        <li><a target="__blank" href="organize.html">Organizers</a></li>
-                                        <li><a target="__blank" href="contact.html">Contact Us</a></li>
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="about-us.html">About Us</a></li>
+                                        <li><a href="speakers.html">Speakers</a></li>
+                                        <li><a href="organizers.html">Organizers</a></li>
+                                        <li><a href="schedule.html">Schedule</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </div>
                             </div>
