--- a/advisory.html
+++ b/advisory.html
@@ -145,7 +145,7 @@
 
                         <!-- Button Box -->
                         <div class="btn-box">
-                            <a target="__blank" href="buy-ticket.html" class="theme-btn btn-style-one"><span class="btn-title">Get Tickets</span></a>
+                            <a target="__blank" href="https://easychair.org/conferences/?conf=ssic2021" class="theme-btn btn-style-one"><span class="btn-title">Submit Online</span></a>
                         </div>
                     </div>
                 </div>
