--- a/advisory.html
+++ b/advisory.html
@@ -347,6 +347,14 @@
                         </div>
                     </div>
                 </div>
+                <div class="speaker-block-two col-md-3 col-sm-12 wow fadeInUp">
+                    <div class="inner-box height-fix">
+                        <div class="info-box">
+                            <h4 class="name"><a target="__blank" href="#"> Marcin Paprzycki </a></h4>
+                            <span class="designation">  Systems Research Institute, Polish Academy of Sciences,Poland </span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
